styles.css
html {
    font-family: 'Outfit', sans-serif;
    scroll-behavior: smooth;
}

.projectBody {
    overflow: hidden;
}

h1 {
    font-size: 16px;
    font-weight: 400;
    margin: 8px 12px;
}

h2 {
    font-size: 32px;
    font-weight: bold;
    margin-left: 16px;
}

h3 {
    font-size: 24px;
    font-weight: 400;
    margin: 32px 0 16px 0;
}

h4 {
    font-size: 20px;
    font-weight: 200;
    margin: 24px 0 16px 16px;
}

.subtitle {
    font-size: 16px;
    font-weight: bold;
    margin: 8px 0;
}

p {
    font-size: 16px;
    font-weight: 100;
    margin: 8px 12px 8px 16px;
}

a {
    text-decoration: none;
}

ul {
    font-size: 16px;
    font-weight: 100;
}

li {
    margin: 0 12px 8px 12px;
}

.year {
    text-align: right;
}

nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

nav a {
    font-size: 16px;
    font-weight: 100;
    margin: 12px 16px 12px 0;
}

main {
    margin: 16px 0 16px 16px;
}

.home {
    font-size: 16px;
    font-weight: 400;
    margin: 24px 32px;
}

.landingHeadline {
    margin: 32vh 0 0 16px;
}

.landingText {
    font-size: 24px;
    font-weight: lighter;
    animation: 4s fadeIn;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.projectsList {
    display: flex;
    flex-direction: column;
}

.projectsList a {
    margin: 4px 12px 4px 16px;
    font-weight: 200;
}

.projectsList hr {
    width: calc(100% - 16px);
    max-width: 800px;
    margin: 16px 0 0 16px;
}

.projectNameYear {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: calc(100% - 16px);
    max-width: 800px;
}

.projectNameYear p {
    margin: 4px 0 0 0;
}

.projectTags {
    display: flex;
    flex-direction: row;
}

.projectContent {
    display: grid;
    grid-template-columns: 24vw 70vw;
    column-gap: 4vw;
    height: 90vh;
}

.projectHeader h2 {
    margin: 20px 0 16px 0;
}

.projectDetails {
    margin: 0 0 9px 0;
    overflow-y: auto;
    padding: 0 24px 0 0;
}

.appScreen {
    max-width: 16vw;
    height: auto;
    margin: 0 24px 0 0;
}

.slides {
    width: 80%;
    height: auto;
    margin: 0 0 16px 0;
}

.images {
    max-width: 40%;
    height: auto;
    border-radius: 8px;
    margin: 16px 16px 16px 0;
}

.imgRow {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.wireframes {
    max-width: 30%;
    height: auto;
    margin: 16px 16px 16px 0;
    border-radius: 8px;
    border: 1px solid blue;
}

.carousel-container {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

button {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 24px;
    border: none;
    background: none;
    cursor: pointer;
}

#arrow-prev {
    left: 10%;
}

#arrow-next {
    right: 10%;
}

#carousel-img {
    width: 80%;
    height: auto;
}

#prev-p2 {
    left: 10%;
}

#next-p2 {
    right: 10%;
}

#prev-final {
    left: 10%;
}

#next-final {
    right: 10%;
}

#prev-ref {
    left: 10%;
}

#next-ref {
    right: 10%;
}

.contactHeader {
    margin: 0 16px 16px 0;
}

.contactDetails {
    display: flex;
    flex-direction: column;
}

.contactDetails a {
    margin: 0 0 24px 0;
}

@media screen and (max-width: 480px) {
    .projectContent {
        display: flex;
        flex-direction: column;
    }

    .projectDetails {
        height: 70dvh;
    }

    .projectDetails h3:first-child {
        margin: 0 0 16px 0;
    }

    .projectSummary {
        display: none;
    }

    .team {
        display: none;
    }

    .projectHeader {
        margin: 0 16px 16px 0;
    }

    .slides {
        width: 100%;
    }

    #prev-ref {
        left: 4px;
    }

    #next-ref {
        right: 4px;
    }
}

/* Compendium */
.modelList {
    display: flex;
    flex-direction: column;
    margin-left: 16px;
}

.modelList hr {
    width: calc(100% - 16px);
    max-width: 800px;
    margin: 16px 0;
}

/* Compendium object */

.objectTitle {
    border-top: 1px solid;
    border-bottom: 1px solid;
    position: sticky;
}

.objectTitle h2 {
    margin: 16px;
}

.objectContent {
    display: grid;
    grid-template-columns: 32vw 60vw;
    column-gap: 2vw;
    height: 70vh;
}

#model-container {
    max-width: 480px;
    height: 320px;
    border-right: 1px solid;
}

.shopImage {
    width: 400px;
    height: auto;
    max-width: 90%;
}

.caption {
    font-style: italic;
    margin-top: 0;
    font-size: 12px;
}

.objectDescription {
    max-width: 640px;
    overflow-y: auto;
    margin-top: 16px;
}

.objectDescription p {
    padding: 8px 0;
}

.objectDescription img {
    padding-left: 16px;
}

@media screen and (max-width: 480px) {
    main {
        margin: 16px 0 0 0;
    }

    .objectContent {
        display: flex;
        flex-direction: column;
        height: 85dvh;
    }

    #model-container {
        max-width: none;
        height: 40dvh;
        border-right: none;
        border-bottom: 1px solid;
    }

    .objectDescription {
        height: 70dvh;
        width: auto;
    }

    .shopImage {
        width: 95vw;
        max-width: none;
    }

    .objectDescription img {
        padding-left: 0;
    }
}

